@@ -1,54 +1,119 @@
 package probeV.GameInfogg.service.user;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.transaction.annotation.Transactional;
 
-import probeV.GameInfogg.auth.SecurityUtil;
+import lombok.extern.slf4j.Slf4j;
 import probeV.GameInfogg.controller.user.dto.request.UserItemListDeleteRequestDto;
-import probeV.GameInfogg.controller.user.dto.request.UserItemListSaveorUpdateRequestDto;
+import probeV.GameInfogg.controller.user.dto.request.UserItemListSaveRequestDto;
+import probeV.GameInfogg.controller.user.dto.request.UserItemListUpdateRequestDto;
 import probeV.GameInfogg.controller.user.dto.response.UserItemListResponseDto;
 import probeV.GameInfogg.domain.user.User;
 import probeV.GameInfogg.domain.user.UserItem;
 import probeV.GameInfogg.exception.item.ItemNotFoundException;
 import probeV.GameInfogg.repository.user.UserItemRepository;
+import probeV.GameInfogg.domain.item.Item;
+import probeV.GameInfogg.repository.item.ItemRepository;
+import probeV.GameInfogg.repository.user.UserRepository;
+import probeV.GameInfogg.domain.user.constant.RoleType;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
 
+
+
+@Slf4j
+@SpringBootTest
+@Transactional
 public class UserItemServiceImplTest {
 
-    @Mock
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private ItemRepository itemRepository;
+
+    @Autowired
     private UserItemRepository userItemRepository;
 
-    @Mock
-    private SecurityUtil securityUtil;
-
-    @InjectMocks
+    @Autowired
     private UserItemServiceImpl userItemService;
+
+    @Mock
+    private SecurityContext securityContext;
+
+    @Mock
+    private Authentication authentication;
 
     private User user;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
-        user = new User(1L, "username", "password");
-        when(securityUtil.getUser()).thenReturn(user);
+        SecurityContextHolder.setContext(securityContext);
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+
+        // Mock UserDetails
+        UserDetails userDetails =  org.springframework.security.core.userdetails.User.withUsername("test1")
+                                        .password("password")
+                                        .roles("USER")
+                                        .build();
+        when(authentication.getPrincipal()).thenReturn(userDetails);
     }
 
     @Test
-    public void testGetUserItems() {
+    public void getUserItems_조회_성공() {
         // Given
-        UserItem userItem1 = new UserItem(1L, user, LocalDateTime.now());
-        UserItem userItem2 = new UserItem(2L, user, LocalDateTime.now());
-        when(userItemRepository.findByUserId(user.getId())).thenReturn(Arrays.asList(userItem1, userItem2));
+        User user = User.builder()
+            .name("test1")
+            .email("test1")
+            .roleType(RoleType.USER)
+            .provider("test1")
+            .attributeCode("test1")
+            .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+            .name("Item1")
+            .effect("Effect1")
+            .description("Description1")
+            .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+            .name("Item2")
+            .effect("Effect2")
+            .description("Description2")
+            .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
 
         // When
         List<UserItemListResponseDto> result = userItemService.getUserItems();
@@ -60,42 +125,334 @@ public class UserItemServiceImplTest {
     }
 
     @Test
-    public void testSaveItems() {
+    public void SaveItems_생성_성공() {
         // Given
-        UserItemListSaveorUpdateRequestDto dto1 = new UserItemListSaveorUpdateRequestDto(1L, "2023-10-10T10:00:00");
-        UserItemListSaveorUpdateRequestDto dto2 = new UserItemListSaveorUpdateRequestDto(null, "2023-10-11T10:00:00");
-        UserItem userItem1 = new UserItem(1L, user, LocalDateTime.now());
-        when(userItemRepository.findByUserId(user.getId())).thenReturn(Arrays.asList(userItem1));
+        User user = User.builder()
+            .name("test1")
+            .email("test1")
+            .roleType(RoleType.USER)
+            .provider("test1")
+            .attributeCode("test1")
+            .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+            .name("Item1")
+            .effect("Effect1")
+            .description("Description1")
+            .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+            .name("Item2")
+            .effect("Effect2")
+            .description("Description2")
+            .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItemListSaveRequestDto dto2 = new UserItemListSaveRequestDto(item2.getId(), "2023-10-10T10:00");
+        List<UserItemListSaveRequestDto> requestDto = Arrays.asList(dto2);
 
         // When
-        userItemService.saveItems(Arrays.asList(dto1, dto2));
+        userItemService.saveItems(requestDto);
 
         // Then
-        verify(userItemRepository, times(1)).save(any(UserItem.class));
+        assertEquals(2, userItemRepository.findByUserId(user.getId()).size());
+        assertEquals(userItem1.getId(), userItemRepository.findByUserId(user.getId()).get(0).getId());
+        assertEquals(dto2.getItemId(), userItemRepository.findByUserId(user.getId()).get(1).getItem().getId());
+        assertEquals(LocalDateTime.parse(dto2.getRestTime()), userItemRepository.findByUserId(user.getId()).get(1).getRestTime());
     }
 
     @Test
-    public void testDeleteItems() {
+    public void SaveItems_오류_아이템없음() {
         // Given
-        UserItemListDeleteRequestDto dto1 = new UserItemListDeleteRequestDto(1L);
-        UserItem userItem1 = new UserItem(1L, user, LocalDateTime.now());
-        UserItem userItem2 = new UserItem(2L, user, LocalDateTime.now());
-        when(userItemRepository.findByUserId(user.getId())).thenReturn(Arrays.asList(userItem1, userItem2));
+        User user = User.builder()
+                .name("test1")
+                .email("test1")
+                .roleType(RoleType.USER)
+                .provider("test1")
+                .attributeCode("test1")
+                .build();
+        userRepository.save(user);
 
-        // When
-        userItemService.deleteItems(Arrays.asList(dto1));
+        Item item1 = Item.builder()
+                .name("Item1")
+                .effect("Effect1")
+                .description("Description1")
+                .build();
+        itemRepository.save(item1);
 
-        // Then
-        verify(userItemRepository, times(1)).deleteById(2L);
-    }
+        Item item2 = Item.builder()
+                .name("Item2")
+                .effect("Effect2")
+                .description("Description2")
+                .build();
+        itemRepository.save(item2);
 
-    @Test
-    public void testSaveItems_ItemNotFound() {
-        // Given
-        UserItemListSaveorUpdateRequestDto dto = new UserItemListSaveorUpdateRequestDto(99L, "2023-10-10T10:00:00");
-        when(userItemRepository.findByUserId(user.getId())).thenReturn(Arrays.asList());
+        UserItem userItem1 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
+
+        UserItemListSaveRequestDto dto = new UserItemListSaveRequestDto(99L, "2023-10-10T10:00:00");
 
         // When & Then
-        assertThrows(ItemNotFoundException.class, () -> userItemService.saveItems(Arrays.asList(dto)));
+        assertThrows(ItemNotFoundException.class, () -> userItemService.saveItems(List.of(dto)));
+    }
+
+    @Test
+    public void updateItems_수정_성공() {
+        // Given
+        User user = User.builder()
+            .name("test1")
+            .email("test1")
+            .roleType(RoleType.USER)
+            .provider("test1")
+            .attributeCode("test1")
+            .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+            .name("Item1")
+            .effect("Effect1")
+            .description("Description1")
+            .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+            .name("Item2")
+            .effect("Effect2")
+            .description("Description2")
+            .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
+
+        UserItemListUpdateRequestDto dto1 = new UserItemListUpdateRequestDto(item1.getId(), "2023-10-10T10:00");
+        UserItemListUpdateRequestDto dto2 = new UserItemListUpdateRequestDto(item2.getId(), "2023-10-10T10:00");
+        List<UserItemListUpdateRequestDto> requestDto = Arrays.asList(dto1, dto2);
+    
+        // When
+        userItemService.updateItems(requestDto);
+
+        // Then
+        assertEquals(dto1.getUserItemid(), userItemRepository.findByUserId(user.getId()).get(0).getId());
+        assertEquals(dto2.getUserItemid(), userItemRepository.findByUserId(user.getId()).get(1).getId());
+        assertEquals(LocalDateTime.parse(dto1.getRestTime()), userItemRepository.findByUserId(user.getId()).get(0).getRestTime());
+        assertEquals(LocalDateTime.parse(dto2.getRestTime()), userItemRepository.findByUserId(user.getId()).get(1).getRestTime());
+    }
+
+    @Test
+    public void updateItems_오류_아이템없음() {
+        // Given
+        User user = User.builder()
+                .name("test1")
+                .email("test1")
+                .roleType(RoleType.USER)
+                .provider("test1")
+                .attributeCode("test1")
+                .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+                .name("Item1")
+                .effect("Effect1")
+                .description("Description1")
+                .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+                .name("Item2")
+                .effect("Effect2")
+                .description("Description2")
+                .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
+
+        UserItemListUpdateRequestDto dto = new UserItemListUpdateRequestDto(99L, "2023-10-10T10:00:00");
+
+        // When & Then
+        assertThrows(ItemNotFoundException.class, () -> userItemService.updateItems(List.of(dto)));
+    }
+
+    @Test
+    public void DeleteItems_전체_삭제_성공() {
+        // Given
+        User user = User.builder()
+                .name("test1")
+                .email("test1")
+                .roleType(RoleType.USER)
+                .provider("test1")
+                .attributeCode("test1")
+                .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+                .name("Item1")
+                .effect("Effect1")
+                .description("Description1")
+                .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+                .name("Item2")
+                .effect("Effect2")
+                .description("Description2")
+                .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+                .restTime(LocalDateTime.now())
+                .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
+
+        // When
+        userItemService.deleteItems(List.of());
+
+        // Then
+        assertEquals(0, userItemRepository.findByUserId(user.getId()).size());
+    }
+
+    @Test
+    public void DeleteItems_부분_삭제_성공() {
+        // Given
+        User user = User.builder()
+            .name("test1")
+            .email("test1")
+            .roleType(RoleType.USER)
+            .provider("test1")
+            .attributeCode("test1")
+            .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder()
+            .name("Item1")
+            .effect("Effect1")
+            .description("Description1")
+            .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+            .name("Item2")
+            .effect("Effect2")
+            .description("Description2")
+            .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItem userItem2 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem2.setUser(user);
+        userItem2.setItem(item2);
+        userItemRepository.save(userItem2);
+
+        UserItemListDeleteRequestDto dto1 = new UserItemListDeleteRequestDto(userItem1.getId());
+
+        // When
+        userItemService.deleteItems(List.of(dto1));
+
+        // Then
+        List<UserItem> userItems = userItemRepository.findByUserId(user.getId());
+        assertEquals(1 , userItems.size());
+        assertEquals(userItem1.getItem().getId(), userItems.get(0).getItem().getId());
+
+    }
+
+    @Test
+    public void DeleteItems_오류_아이템없음() {
+        // Given
+        User user = User.builder()
+            .name("test1")
+            .email("test1")
+            .roleType(RoleType.USER)
+            .provider("test1")
+            .attributeCode("test1")
+            .build();
+        userRepository.save(user);
+
+        Item item1 = Item.builder() 
+            .name("Item1")
+            .effect("Effect1")
+            .description("Description1")
+            .build();
+        itemRepository.save(item1);
+
+        Item item2 = Item.builder()
+            .name("Item2")
+            .effect("Effect2")
+            .description("Description2")
+            .build();
+        itemRepository.save(item2);
+
+        UserItem userItem1 = UserItem.builder()
+            .restTime(LocalDateTime.now())
+            .build();
+        userItem1.setUser(user);
+        userItem1.setItem(item1);
+        userItemRepository.save(userItem1);
+
+        UserItemListDeleteRequestDto dto = new UserItemListDeleteRequestDto(99L);
+
+        // When
+
+        // Then
+        assertThrows(ItemNotFoundException.class, () -> userItemService.deleteItems(List.of(dto)));
     }
 }
